dist/1.0/bin/sample/retrieveUnpackaged/objects/Revenue_Order_Line__c.object
<CustomObject>
    <description>Stores information about NRP and MRP received from BCT</description>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <description>Bandwidth received from BCT</description>
        <inlineHelpText>Bandwidth received from BCT</inlineHelpText>
        <label>Bandwidth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation__c</fullName>
        <description>Parent relation to SFDC Calculation object</description>
        <inlineHelpText>Parent relation to SFDC Calculation object</inlineHelpText>
        <label>Calculation</label>
        <referenceTo>SFDC_Calculation__c</referenceTo>
        <relationshipLabel>Revenue Order Lines</relationshipLabel>
        <relationshipName>Revenue_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capex_One_Off__c</fullName>
        <description>Capex One-Off received from BCT</description>
        <inlineHelpText>Capex One-Off received from BCT</inlineHelpText>
        <label>Capex One-Off</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable__c</fullName>
        <description>Capex Reuseable received from BCT</description>
        <inlineHelpText>Capex Reuseable received from BCT</inlineHelpText>
        <label>Capex Reuseable</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Length of Contract received from BCT</description>
        <inlineHelpText>Length of Contract received from BCT</inlineHelpText>
        <label>Contract Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Costing_Line__c</fullName>
        <description>Related Costing Line which was used to create this Revenue Order Line</description>
        <inlineHelpText>Related Costing Line which was used to create this Revenue Order Line</inlineHelpText>
        <label>Costing Line</label>
        <referenceTo>Costing_Line__c</referenceTo>
        <relationshipLabel>Revenue Order Lines</relationshipLabel>
        <relationshipName>Revenue_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Gross Margin received from BCT</description>
        <inlineHelpText>Gross Margin received from BCT</inlineHelpText>
        <label>Gross Margin</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>Medium received from BCT</description>
        <inlineHelpText>Medium received from BCT</inlineHelpText>
        <label>Medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Charge__c</fullName>
        <description>MRC Amount, that was returned from BCT</description>
        <inlineHelpText>MRC Amount, that was returned from BCT</inlineHelpText>
        <label>Monthly Recurring Charge</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Charge__c</fullName>
        <description>NRC Amount that was returned from BCT</description>
        <inlineHelpText>NRC Amount that was returned from BCT</inlineHelpText>
        <label>Non Recurring Charge</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Opex Monthly received from BCT</description>
        <inlineHelpText>Opex Monthly received from BCT</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_Off__c</fullName>
        <description>Opex One-Off received from BCT</description>
        <inlineHelpText>Opex One-Off received from BCT</inlineHelpText>
        <label>Opex One-Off</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <description>Relation to Order Line, for which given Revenue OL was created</description>
        <inlineHelpText>Relation to Order Line, for which given Revenue OL was created</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Revenue Order Lines</relationshipLabel>
        <relationshipName>Revenue_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payback__c</fullName>
        <description>Payback received from BCT</description>
        <inlineHelpText>Payback received from BCT</inlineHelpText>
        <label>Payback</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profitability_Ratio__c</fullName>
        <description>Profitability Ratio received from BCT</description>
        <inlineHelpText>Profitability Ratio received from BCT</inlineHelpText>
        <label>Profitability Ratio</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Order Line</label>
    <nameField>
        <label>Revenue Order Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>